[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Vardan03 <vharmen777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
djangorestframework = "^3.15.2"
django-filter = "^24.3"
django-debug-toolbar = "^4.4.6"
pillow = "^10.4.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
